test/lexer/invalid/literals.glsl
0x123lf 0123f 0123lf 0.123u 0.123i 123ii 123uu 123ff 123abcd
